  	- Fixed hardcoded HTTP reference in list_header.inc 
		(Thx hongyi_gao)
	- Fixed refresh javascript for main page.
	- Fixed <html lang=> tag so that it validates (Thx XGizzmo)
	- Added show_footer_menu() funciton and preference (Thx XGizzmo)
	- Added localplay_menu config option that puts MPD on it's own 
		page, will eventually control icecast,localplay,slimserver
		as well (Thx Nedko)
	

--------------------------------------------------------------------------
  v.3.3.1-Beta2 05/22/2005:
  	- Included new Greyblock Theme (Thx Shieldb)
  	- Fixed playlists if use_auth == FALSE
  	- Tweaked CSS classing in an attempt to improve themeing. This
		breaks all previous themes. (Thx mkeadle)
	- Fixed problem with Color Boxes in IE (Thx rperkins)
  	- Tweaked the Main page adding most popular albums as well as
		spliting out the mpd control and now playing. 
		(Thx Nedko and reflous)
  	- Fixed a problem with directories named '0' (Thx Protagonist)
  	- Fixed lack of seeding of RAND() which would cause Pre PHP 4.2
		to not really have random playlists. 
  	- Fixed a bug where guests could change their own password and 
		control MPD
  	- Fixed a ton of class formating inconsistencies as well as tweaked
		a few tables. (Thx Rperkins)
  	- Fixed some consistency issues with where the A-Z listing was 
		between Albums and Artists, Added Bolding of currently
		selected Letter/Number (Thx Rperkins)
  	- Fixed a problem with the admin preferences where the theme
		colors wouldn't reset, if the target theme is the current 
		one of the user setting it (Thx Nedko)
	- Fixed a problem with the CHARSET not being passed correctly
		(Thx Nedko)


--------------------------------------------------------------------------
  v.3.3.1-Beta1 05/01/2005:
  	- Added Random Play for Playlists
  	- Added Per User config option to set ellipse thresholds as well 
		as some index.php tweaks (Thx Nedko)
  	- Added support for SPX files. 